--- a/myAcademy/src/View/ModificarProfesor.fxml
+++ b/myAcademy/src/View/ModificarProfesor.fxml
@@ -39,7 +39,7 @@
             </Label>
             <ComboBox fx:id="combGender" layoutX="628.0" layoutY="90.0" prefWidth="150.0" />
             <TextField fx:id="textDNI" layoutX="628.0" layoutY="148.0" prefHeight="26.0" prefWidth="150.0" />
-            <ListView fx:id="listVAlumnos" layoutX="29.0" layoutY="70.0" prefHeight="326.0" prefWidth="224.0" />
+            <ListView fx:id="listVProfesores" layoutX="29.0" layoutY="70.0" prefHeight="326.0" prefWidth="224.0" />
             <Label layoutX="29.0" layoutY="41.0" prefHeight="18.0" prefWidth="126.0" text="Lista de Profesores">
                <font>
                   <Font name="Microsoft JhengHei" size="12.0" />
@@ -67,6 +67,7 @@
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
+            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Volver" />
       </children>
     </AnchorPane>
   </children>
