--- a/myAcademy/bin/View/AddPayment.fxml
+++ b/myAcademy/bin/View/AddPayment.fxml
@@ -43,6 +43,7 @@
                </font>
             </Label>
             <TextField fx:id="textDate" layoutX="400.0" layoutY="194.0" prefHeight="26.0" prefWidth="302.0" />
+            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Volver" />
       </children>
     </AnchorPane>
   </children>
