--- a/myAcademy/bin/View/Alumno.fxml
+++ b/myAcademy/bin/View/Alumno.fxml
@@ -23,14 +23,14 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <Button layoutX="15.0" layoutY="296.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="242.0" text="Realizar prueba" />
-            <ListView layoutX="15.0" layoutY="71.0" prefHeight="200.0" prefWidth="242.0" />
+            <Button fx:id="bRealizar"  layoutX="15.0" layoutY="296.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="242.0" text="Realizar prueba" />
+            <ListView fx:id="listVTest" layoutX="15.0" layoutY="71.0" prefHeight="200.0" prefWidth="242.0" />
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="99.0" layoutY="54.0" prefHeight="18.0" prefWidth="74.0" text="Pruebas">
                <font>
                   <Font name="Microsoft YaHei Light" size="12.0" />
                </font>
             </Label>
-            <ListView layoutX="384.0" layoutY="71.0" prefHeight="200.0" prefWidth="242.0" />
+            <ListView fx:id="listVRealizados" layoutX="384.0" layoutY="71.0" prefHeight="200.0" prefWidth="242.0" />
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="442.0" layoutY="54.0" prefHeight="18.0" prefWidth="126.0" text="Pruebas realizadas">
                <font>
                   <Font name="Microsoft YaHei Light" size="12.0" />
