--- a/myAcademy/bin/View/AddFichaEvaluacion.fxml
+++ b/myAcademy/bin/View/AddFichaEvaluacion.fxml
@@ -2,43 +2,50 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<TitledPane fx:id="ventanaAddFicha" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="394.0" prefWidth="477.0" text="Agregar ficha de evaluacion a " xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerAddFichaEvaluacion">
+<TitledPane fx:id="ventanaAddFicha" collapsible="false" prefHeight="469.0" prefWidth="687.0" text="Agregar ficha de evaluacion" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerAddFichaEvaluacion">
    <content>
-      <Pane prefHeight="354.0" prefWidth="516.0">
+      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="401.0" prefWidth="685.0">
          <children>
-            <Label layoutX="21.0" layoutY="27.0" text="Notas" underline="true" />
-            <Label layoutX="37.0" layoutY="52.0" prefHeight="17.0" prefWidth="136.0" text="Reading &amp; Use of English" />
-            <Slider fx:id="sldReadingAndUse" blockIncrement="1.0" layoutX="188.0" layoutY="52.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="14.0" prefWidth="259.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
-            <Slider fx:id="sldWriting" blockIncrement="1.0" layoutX="188.0" layoutY="98.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="14.0" prefWidth="259.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
-            <Label layoutX="140.0" layoutY="98.0" prefHeight="17.0" prefWidth="40.0" text="Writing" />
-            <Slider fx:id="sldListening" blockIncrement="1.0" layoutX="188.0" layoutY="142.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="14.0" prefWidth="259.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
-            <Label layoutX="131.0" layoutY="142.0" text="Listening" />
-            <Label layoutX="131.0" layoutY="181.0" text="Speaking" />
-            <Slider fx:id="sldSpeaking" blockIncrement="1.0" layoutX="188.0" layoutY="181.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="14.0" prefWidth="259.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
-            <TextField fx:id="textApuntesProfesor" alignment="TOP_LEFT" layoutX="21.0" layoutY="244.0" prefHeight="97.0" prefWidth="289.0" />
-            <Label layoutX="21.0" layoutY="218.0" text="Apuntes" underline="true" />
-            <Button fx:id="bGuardar" layoutX="345.0" layoutY="285.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="81.0" text="Guardar">
+            <Label layoutX="242.0" layoutY="68.0" text="Notas" underline="true" />
+            <Label layoutX="242.0" layoutY="103.0" prefHeight="17.0" prefWidth="136.0" text="Reading &amp; Use of English" />
+            <Slider fx:id="sldReadingAndUse" blockIncrement="1.0" layoutX="386.0" layoutY="103.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" onMouseReleased="#modificarMedia" prefHeight="14.0" prefWidth="259.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
+            <Slider fx:id="sldWriting" blockIncrement="1.0" layoutX="386.0" layoutY="147.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" onMouseReleased="#modificarMedia" prefHeight="14.0" prefWidth="259.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
+            <Label layoutX="332.0" layoutY="147.0" prefHeight="17.0" prefWidth="40.0" text="Writing" />
+            <Slider fx:id="sldListening" blockIncrement="1.0" layoutX="386.0" layoutY="193.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" onMouseReleased="#modificarMedia" prefHeight="14.0" prefWidth="259.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
+            <Label layoutX="328.0" layoutY="193.0" text="Listening" />
+            <Label layoutX="328.0" layoutY="238.0" text="Speaking" />
+            <Slider fx:id="sldSpeaking" blockIncrement="1.0" layoutX="386.0" layoutY="237.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" onMouseReleased="#modificarMedia" prefHeight="14.0" prefWidth="259.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
+            <Label layoutX="242.0" layoutY="303.0" text="Apuntes" underline="true" />
+            <Button fx:id="bGuardar" layoutX="564.0" layoutY="375.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="81.0" text="Guardar">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Label layoutX="332.0" layoutY="254.0" prefHeight="17.0" prefWidth="106.0" text="Nota media:">
+            <Label layoutX="544.0" layoutY="348.0" prefHeight="20.0" prefWidth="78.0" text="Nota media:">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="labMedia" layoutX="411.0" layoutY="254.0" prefHeight="20.0" prefWidth="32.0" text="0,00">
+            <Label fx:id="labMedia" layoutX="622.0" layoutY="348.0" prefHeight="20.0" prefWidth="46.0" text="0,00">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
+            <ListView fx:id="listVAlumnos" layoutX="20.0" layoutY="84.0" prefHeight="325.0" prefWidth="200.0" />
+            <Label layoutX="20.0" layoutY="67.0" prefHeight="18.0" prefWidth="126.0" text="Lista de alumnos" underline="true">
+               <font>
+                  <Font name="Microsoft JhengHei Bold" size="12.0" />
+               </font>
+            </Label>
+            <Button fx:id="bBack" layoutX="20.0" layoutY="22.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
+            <TextArea fx:id="textApuntesProfesor" layoutX="243.0" layoutY="324.0" prefHeight="96.0" prefWidth="291.0" wrapText="true" />
          </children>
       </Pane>
    </content>
