--- a/myAcademy/bin/View/AddUser.fxml
+++ b/myAcademy/bin/View/AddUser.fxml
@@ -78,7 +78,7 @@
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Volver" />
+            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
       </children>
     </AnchorPane>
   </children>
