--- a/myAcademy/bin/View/Alumno.fxml
+++ b/myAcademy/bin/View/Alumno.fxml
@@ -39,7 +39,7 @@
             <Button layoutX="384.0" layoutY="296.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="242.0" text="Consultar resultado" />
             <Button layoutX="278.0" layoutY="98.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="86.0" text="Ver ficha" />
             <Button fx:id="bShowPayments" layoutX="278.0" layoutY="175.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="86.0" text="Ver pagos" />
-            <Button fx:id="bExit" layoutX="278.0" layoutY="296.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" style="-fx-background-color: #dd0f0f;" text="Salir" />
+            <Button fx:id="bExit" layoutX="278.0" layoutY="296.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" style="-fx-background-color: #ffb412;" text="Salir" />
          </children>
     </AnchorPane>
   </children>
