--- a/myAcademy/bin/View/Login.fxml
+++ b/myAcademy/bin/View/Login.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -23,15 +25,20 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <Button fx:id="bEntrar" layoutX="160.0" layoutY="216.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="302.0" text="Entrar" />
-            <TextField fx:id="textName" layoutX="160.0" layoutY="73.0" prefHeight="26.0" prefWidth="302.0" />
-            <TextField fx:id="textPass" layoutX="160.0" layoutY="148.0" prefHeight="26.0" prefWidth="302.0" />
-            <Label layoutX="160.0" layoutY="46.0" prefHeight="18.0" prefWidth="140.0" text="Nombre de usuario">
+            <ImageView blendMode="MULTIPLY" fitHeight="150.0" fitWidth="200.0" layoutX="236.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@logoMyAcademy.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="bEntrar" layoutX="160.0" layoutY="309.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="302.0" text="Entrar" />
+            <TextField fx:id="textName" layoutX="160.0" layoutY="175.0" prefHeight="26.0" prefWidth="302.0" />
+            <TextField fx:id="textPass" layoutX="160.0" layoutY="231.0" prefHeight="26.0" prefWidth="302.0" />
+            <Label layoutX="160.0" layoutY="149.0" prefHeight="18.0" prefWidth="140.0" text="Nombre de usuario">
                <font>
                   <Font name="Microsoft JhengHei UI Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="160.0" layoutY="120.0" prefHeight="18.0" prefWidth="140.0" text="Contraseña">
+            <Label layoutX="160.0" layoutY="206.0" prefHeight="18.0" prefWidth="140.0" text="Contraseña">
                <font>
                   <Font name="Microsoft JhengHei UI Bold" size="12.0" />
                </font>
