--- a/myAcademy/bin/View/ModificarAlumno.fxml
+++ b/myAcademy/bin/View/ModificarAlumno.fxml
@@ -25,7 +25,7 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="458.0" prefWidth="836.0" VBox.vgrow="ALWAYS">
       <children>
-            <Button fx:id="bAdd" layoutX="269.0" layoutY="352.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="514.0" style="-fx-background-color: #ed7812;" text="Modificar" textFill="#f5f5f5e5" />
+            <Button fx:id="bAdd" layoutX="269.0" layoutY="352.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="514.0" style="-fx-background-color: #ffb412;" text="Modificar" textFill="#f5f5f5e5" />
             <TextField fx:id="textName" layoutX="269.0" layoutY="90.0" prefHeight="26.0" prefWidth="302.0" />
             <Label layoutX="269.0" layoutY="67.0" prefHeight="18.0" prefWidth="140.0" text="Nombre">
                <font>
@@ -73,7 +73,7 @@
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Volver" />
+            <Button fx:id="bBack" layoutX="29.0" layoutY="14.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
       </children>
     </AnchorPane>
   </children>
