--- a/myAcademy/src/View/ShowPayments.fxml
+++ b/myAcademy/src/View/ShowPayments.fxml
@@ -42,7 +42,7 @@
                   <Font name="Microsoft JhengHei Bold" size="12.0" />
                </font>
             </Label>
-            <Button fx:id="bBack" layoutX="25.0" layoutY="24.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
+            <Button fx:id="bBack" layoutX="25.0" layoutY="24.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
       </children>
     </AnchorPane>
   </children>
