--- a/myAcademy/bin/View/AddPayment.fxml
+++ b/myAcademy/bin/View/AddPayment.fxml
@@ -43,7 +43,7 @@
                </font>
             </Label>
             <TextField fx:id="textDate" layoutX="400.0" layoutY="194.0" prefHeight="26.0" prefWidth="302.0" />
-            <Button fx:id="bBack" layoutX="24.0" layoutY="30.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
+            <Button fx:id="bBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false"  text="Volver" />
       </children>
     </AnchorPane>
   </children>
