--- a/myAcademy/bin/View/ModificarAlumno.fxml
+++ b/myAcademy/bin/View/ModificarAlumno.fxml
@@ -73,7 +73,7 @@
                   <Font name="Microsoft JhengHei" size="12.0" />
                </font>
             </Label>
-            <Button fx:id="bBack" layoutX="29.0" layoutY="14.0" mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
+            <Button fx:id="bBack" layoutX="29.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #ffb412;" text="Volver" textFill="WHITE" />
       </children>
     </AnchorPane>
   </children>
